editing discord code

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </ul>
     </div>
     <div id="social-links">
-      <a href="https://discord.gg/j4VKPVmz" target="_blank">
+      <a href="https://discord.gg/8ar5Y7YAHB" target="_blank">
         <i class="fa-brands fa-discord"></i>
       </a>
 
